--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,21 @@
 body{
     text-align: center;
+    font-size: 10px;
     font-family: Arial;
-    color: deeppink;
+    color: #333;
+    margin: 0;
+    padding: 0;
 }
+
+#container{
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid #DDD;
+    margin: 0 auto;
+}
+
+#container div{
+    font-size: 20px;
+}
+
