--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,7 @@
 body{
     text-align: center;
     font-size: 10px;
-    font-family: Arial;
+    font-family: Courier;
     color: #333;
     margin: 0;
     padding: 0;
