--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,4 +1,5 @@
 body{
+    background: #1e1f24;
     text-align: center;
     font-size: 10px;
     font-family: Arial;
@@ -14,6 +15,11 @@ body{
     font-weight: bold;
     margin: 0;
     padding: 1.0em;
+}
+
+#cabecera #logo{
+    width: 20px;
+    vertical-align:middle;
 }
 
 #cabecera #tagline{
@@ -35,5 +41,6 @@ body{
 }
 
 #post{
+    background: white;
     padding-left: 1.5em;
 }
