--- a/css/estilos.css
+++ b/css/estilos.css
@@ -37,3 +37,10 @@ body{
 #post{
     padding-left: 1.5em;
 }
+
+#footer{
+    background-color: #777;
+    color: white;
+    text-align: center;
+    padding:0.5em;
+}
