Cambio de color del footer

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -39,7 +39,7 @@ body{
 }
 
 #footer{
-    background-color: #777;
+    background-color: #a0590d;
     color: white;
     text-align: center;
     padding:0.5em;
